--- a/libs/nest-auth/package.json
+++ b/libs/nest-auth/package.json
@@ -4,6 +4,9 @@
   "dependencies": {
     "tslib": "^2.3.0"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "type": "commonjs",
   "main": "./src/index.ts",
   "typings": "./src/index.d.ts"
