--- a/libs/ngx-utils/package.json
+++ b/libs/ngx-utils/package.json
@@ -5,5 +5,8 @@
     "@angular/common": "^19.0.0",
     "@angular/core": "^19.0.0"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "sideEffects": false
 }
