--- a/libs/utils/package.json
+++ b/libs/utils/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@test-group/utils",
   "version": "0.0.1",
-  "main": "./src/index.ts",
-  "typings": "./src/index.d.ts",
   "dependencies": {
     "tslib": "^2.3.0"
-  }
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "main": "./src/index.ts",
+  "typings": "./src/index.d.ts"
 }
