--- a/libs/nest-auth/package.json
+++ b/libs/nest-auth/package.json
@@ -7,6 +7,13 @@
   "publishConfig": {
     "access": "public"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/avawaruna/hichchi.git"
+  },
+  "keywords": [],
+  "author": "Waruna Udayanga",
+  "license": "MIT",
   "type": "commonjs",
   "main": "./src/index.ts",
   "typings": "./src/index.d.ts"
