--- a/libs/nest-crud/package.json
+++ b/libs/nest-crud/package.json
@@ -7,6 +7,12 @@
   "publishConfig": {
     "access": "public"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/avawaruna/hichchi.git"
+  },
+  "keywords": [],
+  "author": "Waruna Udayanga",
   "type": "commonjs",
   "main": "./src/index.ts",
   "typings": "./src/index.d.ts"
