--- a/libs/ngx-utils/package.json
+++ b/libs/ngx-utils/package.json
@@ -8,5 +8,11 @@
   "publishConfig": {
     "access": "public"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/avawaruna/hichchi.git"
+  },
+  "keywords": [],
+  "author": "Waruna Udayanga",
   "sideEffects": false
 }
