--- a/libs/nest-core/project.json
+++ b/libs/nest-core/project.json
@@ -1,6 +1,6 @@
 {
   "name": "nest-core",
-  "$schema": "../../node_modules/nx/schemas/project-schema.json",
+  "$schema": "/node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/nest-core/src",
   "projectType": "library",
   "release": {
