--- a/libs/utils/project.json
+++ b/libs/utils/project.json
@@ -1,6 +1,6 @@
 {
   "name": "utils",
-  "$schema": "../../node_modules/nx/schemas/project-schema.json",
+  "$schema": "/node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/utils/src",
   "projectType": "library",
   "release": {
