--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,7 @@ jobs:
               with:
                   fetch-depth: 0
                   filter: tree:0
+                  token: ${{ secrets.PAT }}
 
             - name: Install Node
               uses: actions/setup-node@v4
