--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ on:
             - v*.*.*
 
 jobs:
-    test:
+    publish:
         name: Publish
         runs-on: ubuntu-latest
         permissions:
@@ -22,6 +22,10 @@ jobs:
                   fetch-depth: 0
                   filter: tree:0
                   token: ${{ secrets.PAT }}
+
+            - name: Exit if not on master branch
+              if: endsWith(github.ref, 'release') == false
+              run: exit -1
 
             - name: Install Node
               uses: actions/setup-node@v4
